<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/maps"
            android:title="@string/maps"
            android:icon="@drawable/baseline_location_on_24"
            app:showAsAction="always" />
        <item
            android:id="@+id/setting"
            android:title="@string/setting"
            android:icon="@drawable/baseline_settings_24"
            app:showAsAction="never" />
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/baseline_logout_24"
            app:showAsAction="never" />
    </group>

</menu>