<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_story"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    cardview:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:contentDescription="@string/story_picture"
            android:scaleType="centerCrop"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintHorizontal_bias="0.0"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toBottomOf="@id/iv_item_photo"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintHorizontal_bias="0.0"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintTop_toBottomOf="@id/tv_item_name"
            tools:text="@string/lorem_ipsum" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>